<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="266dp"
                android:layout_height="94dp"
                android:layout_marginTop="32dp"
                android:text="@string/register_button"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextPasswordAgain"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:ems="10"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:onClick="register"
                android:text="@string/register_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordAgain" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:onClick="cancel"
                android:text="@string/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>