<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textViewRegister"
                android:layout_width="266dp"
                android:layout_height="94dp"
                android:layout_marginTop="32dp"
                android:text="@string/new_appointment"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="266dp"
                android:layout_height="94dp"
                android:layout_marginTop="32dp"
                android:text="2024. 1. 1."
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRegister" />

            <Spinner
                android:id="@+id/spinner"

                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginEnd="@dimen/margin_sides"

                android:layout_marginTop="@dimen/margin_top"
                android:gravity="center"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

            <Button
                android:id="@+id/buttonSetDate"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:onClick="setDate"
                android:text="@string/change_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <Button
                android:id="@+id/buttonNewAppointment"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:onClick="addAppointment"
                android:text="@string/book_appointment"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonSetDate" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_sides"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_sides"
                android:onClick="cancel"
                android:text="@string/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonNewAppointment" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>